# mantle-news-aggregator

./: .gitignore  DEPLOYMENT.md  Procfile  README.md  app.json  get_chat_id.py  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/core/: __init__.py  allowed_channels.txt  base_classes.py  config.py  exceptions.py
src/telegram/: __init__.py
src/telegram/client/: __init__.py  session_manager.py  telegram_client.py
src/telegram/handlers/: __init__.py  event_handler.py  gap_handler.py  message_handler.py
src/telegram/services/: __init__.py  bot_forwarder.py  channel_monitor.py  llm_processor.py
src/utils/: logger.py
