[project]
name = "telegram-news-funnel"
version = "0.1.0"
description = ""
authors = [
    {name = "ernestng11",email = "ernestng11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "telethon>=1.34.0",
    "python-dotenv>=1.0.0",
    "asyncio-mqtt>=0.16.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "structlog>=23.2.0",
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=1.99.1,<2.0.0)"
]

[tool.poetry]
packages = [
    {include = "src"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
